# study_fastapi

./: .editorconfig  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .zshrc.example  LICENSE  README.SHELL.md  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
COPILOT_INSTRUCTIONS/: 1.STARTER_PROMPT.md  COPILOT_INSTRUCTIONS_GIT_HYGIENE.md  COPILOT_INSTRUCTIONS_TDD.md  COPILOT_INSTRUCTIONS_TESTS.md  COPILOT_INSTRUCTIONS_VIBE_CODING.md  Tips.md
scripts/: .template.zsh  release_tag.sh  rename_package.py
scripts/zsh/: 10-env.zsh  20-aliases.zsh  30-python.zsh
src/example_pkg/: __init__.py  math_utils.py
src/study_fastapi/: __init__.py  a2_fastapi_header.py  a3_jsonable_encoder.py  a4_fastapi_async.py  a5_pydantic_model.py  a6_dependency_injection.py  a8_mvcapp.py  hello_fastapi.py
src/utils/: logging_utils.py
tests/: conftest.py  test_logging_utils.py  test_math_utils.py
tests/study_fastapi/: BaseTestFastAPI.py  test_2fastapi_header.py  test_3jsonable_encoder.py  test_4fastapi_async.py  test_5pydantic_model.py  test_6dependency_injection.py  test_hello_fastapi.py  test_hello_fastapi_live.py
